tests/cases/typecheck/property_access/numeric_access_on_struct.stderr
error[0015]: the field `2` is not present within `Frobulate(data = 23_i32, other = 'c')`
 --> $DIR/numeric_access_on_struct.hash:8:1
7 |   
8 |   t := Frobulate(data = 23);
  |   ^ `Frobulate(data = 23_i32, other = 'c')` does not contain the property `2`
9 |   
